[package]
name = "mucaster"
version = "0.0.0"
authors = ["Jayden Dumouchel <jdumouch@ualberta.ca>"]
edition = "2021"

[dependencies]
# Async
tokio = { version = "0.2", features = ["full", "sync"] }

# Chromecast
rust_cast = { version = "0.16.0", features = ["thread_safe"] } 
mdns = "1.1.0"       
futures-util = "0.3.19"
regex = "1.5"

# Server hosting
warp = "0.2"
resolv = "0.2.0"

# Logging
fern =  { version = "0.6.0" }
log = { version = "0.4.11" }

# Utilities
indoc = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Media
ffmpeg-next = "4.4.0"
